--- a/pom.xml
+++ b/pom.xml
@@ -436,6 +436,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5</version>
             </plugin>
         </plugins>
     </build>
